--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.1.2",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.4.1",
     "spotify-web-api-node": "^5.0.2"
   }
 }
